--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -17,8 +17,7 @@ input.hide-number-increment::-webkit-inner-spin-button {
 }
 
 .container-bg {
-  background-color: var(--background-color);
-  border: 1px solid var(--border-color);
+  background-color: var(--container-bg-color);
   border-radius: 7px;
 }
 
@@ -61,4 +60,26 @@ input.hide-number-increment::-webkit-inner-spin-button {
   color: gray;
   text-decoration: none;
   cursor: not-allowed;
+}
+
+
+::-webkit-scrollbar {
+  width: 4px; /* Width for vertical scrollbar */
+  height: 4px; /* Height for horizontal scrollbar */
+}
+
+/* Optional: Style the scrollbar track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+/* Optional: Style the scrollbar handle */
+::-webkit-scrollbar-thumb {
+  background: #888; /* Color of the handle */
+  border-radius: 10px; /* Round corners */
+}
+
+/* Optional: Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Color of the handle on hover */
 }
