--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -1,7 +1,6 @@
 @each $color in $colorType {
   .accordion-container.#{$color} {
-    box-shadow: colorMapper(grayClr, 200) 0px 8px 24px;
-    border: 1px solid colorMapper($color, light);
+    border: 1px solid var(--border-color);
     width: 100%;
     height: 100%;
     border-radius: 7px;
@@ -10,7 +9,7 @@
     .accordion-container-header {
       cursor: pointer;
       display: flex;
-      padding: 12px 16px;
+      padding: 8px 16px;
       color: var(--color-common-main);
       align-items: center;
       justify-content: space-between;
@@ -27,32 +26,28 @@
       svg {
         width: 13px;
         height: 13px;
-        fill:var(--color-common-main)
+        fill: var(--color-common-main);
       }
-      transition: transform 0.3s linear;
+      transition: transform 0.3s ease;
     }
 
     .accordion-container-description {
-      transition: all 0.3s linear;
-      padding: 0px 16px;
+      max-height: 0;
+      overflow: hidden;
       opacity: 0;
-      visibility: hidden;
-      height: 0px;
+      transition: max-height 0.3s ease, opacity 0.3s ease, padding 0.3s ease;
+      padding: 0 16px;
     }
 
     &.open {
       .header-icon {
-        transform-origin: center;
-        transition: transform 0.3s linear;
         transform: rotate(-180deg);
       }
 
       .accordion-container-description {
-        transition: all 0.3s linear;
-        padding: 16px;
-        height: auto;
+        max-height: 1000px; // Adjust this value based on your maximum expected content height
         opacity: 1;
-        visibility: visible;
+        padding: 16px;
       }
     }
   }
