--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -3,9 +3,10 @@
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  background-color: #e0e0e0;
+  background-color: var(--container-bg-color);
+  border: 1px solid var(--border-color);
   font-weight: bold;
-  color: #ffffff;
+  color: var(--hovered-text-color);
   user-select: none;
 
   &.circle {
