--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -41,7 +41,7 @@
       height: 1.5em;
       width: 1.5em;
       vertical-align: middle;
-      border: 1px solid colorMapper($color, main);
+      border: 1px solid var(--border-color);
       position: relative;
     }
 
@@ -53,7 +53,7 @@
     }
 
     input[type="checkbox"]:not(:disabled):hover {
-      border-color: colorMapper($color, main);
+      border-color: var(--border-color);
     }
 
     input[type="checkbox"]:active:not(:disabled) {
