--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -6,7 +6,6 @@
     position: absolute;
     top: 100%;
     z-index: 1000;
-    display: block;
     min-width: 200px;
     padding: 0.5rem 0;
     margin: 0.125rem 0 0;
@@ -18,6 +17,16 @@
     background-clip: padding-box;
     border: 1px solid var(--border-color);
     border-radius: 0.25rem;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    pointer-events: none;
+
+    &.open {
+      opacity: 1;
+      transform: translateY(0);
+      pointer-events: auto;
+    }
 
     &.left {
       left: 0;
@@ -32,11 +41,18 @@
       cursor: pointer;
       margin: 10px 0px;
 
+      &.li-click {
+        cursor: pointer;
+        .btn {
+          cursor: pointer;
+        }
+      }
+
       &:hover {
-        background-color: colorMapper(primary, main);
+        background-color: var(--bg-hover-color);
       }
       &:hover .body-text {
-        color: white;
+        color: var(--hovered-text-color);
       }
     }
   }
