--- a/src/components/RangeSelector/RangeSelector.scss
+++ b/src/components/RangeSelector/RangeSelector.scss
@@ -58,7 +58,8 @@
         -webkit-appearance: none;
         appearance: none;
         border-radius: 50%;
-        background-color: colorMapper($color, main);
+        background-color: white;
+        box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
         cursor: pointer;
       }
 
