--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -9,7 +9,8 @@
       position: relative;
       line-height: 1.7;
       .selected-options {
-        border: 1px solid colorMapper($color, main);
+        // border: 1px solid colorMapper($color, main);
+        border: 1px solid var(--border-color);
         border-radius: 4px;
         &.sm {
           padding: 4px 10px;
@@ -46,7 +47,7 @@
           transition: all 0.1s ease-in-out;
           top: 0%;
           transform: translateY(-70%) translateX(-5px);
-          background: colorMapper(common, "white");
+          background: colorMapper(common, 'white');
           font-size: 12px;
           padding: 0px 4px;
           color: colorMapper($color, main);
@@ -56,7 +57,7 @@
           transition: all 0.1s ease-in-out;
           top: 0%;
           transform: translateY(-70%) translateX(-5px);
-          background: colorMapper(common, "white");
+          background: colorMapper(common, 'white');
           font-size: 12px;
           padding: 0px 4px;
           color: colorMapper($color, main);
@@ -65,6 +66,7 @@
         .selected-options-list {
           .placeholder-text {
             color: var(--color-common-main);
+            opacity: 0.3;
           }
         }
 
@@ -76,7 +78,7 @@
           appearance: none;
           border-left: 7px solid transparent;
           border-right: 7px solid transparent;
-          border-top: 7px solid colorMapper($color, main);
+          border-top: 7px solid var(--color-common-main);
           position: absolute;
           right: 8px;
           cursor: pointer;
@@ -96,10 +98,30 @@
       .options-container {
         position: absolute;
         visibility: hidden;
-        overflow-y: scroll;
-        max-height: 200px;
         margin-top: 5px;
         opacity: 0;
+        min-height: 150px;
+        max-height: 250px;
+        overflow-y: auto;
+        border: 1px solid var(--border-color);
+        background-color: var(--container-bg-color);
+        .option-container__search {
+          position: sticky;
+          background-color: var(--container-bg-color);
+          top: 0px;
+          z-index: 100;
+          padding: 20px;
+
+          .input-field {
+            border: 0.5px solid var(--border-color);
+          }
+        }
+        .options-list {
+          padding: 0px 20px;
+        }
+        &:not(:has(.option-container__search)) .options-list {
+          padding: 20px;
+        }
       }
 
       .options-container.open {
@@ -110,19 +132,6 @@
         z-index: 9999;
         width: 100%;
       }
-
-      .single-option {
-        cursor: pointer;
-        padding: 4px 10px;
-        &:hover {
-          background-color: colorMapper($color, main);
-          color:white
-        }
-        &-active {
-          background-color: colorMapper($color, main);
-          color:white
-        }
-      }
     }
     label {
       white-space: nowrap;
@@ -130,18 +139,12 @@
     }
   }
 
-  &:not(.top)
-    .selected-options:has(~ .options-container:not(.open)):has(
-      :not(.single-selected-option)
-    ) {
+  &:not(.top) .selected-options:has(~ .options-container:not(.open)):has(:not(.single-selected-option)) {
     .placeholder-text {
       display: none;
     }
   }
-  &.top
-    .selected-options:has(~ .options-container:not(.open)):has(
-      :not(.single-selected-option)
-    ) {
+  &.top .selected-options:has(~ .options-container:not(.open)):has(:not(.single-selected-option)) {
     .placeholder-text {
       display: inline;
     }
@@ -149,6 +152,20 @@
 
   .single-selected-option {
     font-weight: 500;
-    color:var(--color-common-main)
+    color: var(--color-common-main);
+  }
+}
+
+.single-option {
+  cursor: pointer;
+  padding: 4px 10px;
+  border-radius: 4px;
+  &:hover {
+    background-color: var(--bg-hover-color);
+    color: var(--hovered-text-color);
+  }
+  &-active {
+    background-color: var(--bg-hover-color);
+    color: var(--hovered-text-color);
   }
 }
