--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -21,10 +21,11 @@
             content: '';
             position: absolute;
             left: 50%;
+            opacity: 0.3;
             transform: translateX(-50%);
             border-left: 6px solid transparent;
             border-right: 6px solid transparent;
-            border-bottom: 6px solid lightgray;
+            border-bottom: 6px solid var(--text-description-color);
           }
 
           &::after {
@@ -32,10 +33,11 @@
             position: absolute;
             left: 50%;
             bottom: 0;
+            opacity: 0.3;
             transform: translateX(-50%);
             border-left: 6px solid transparent;
             border-right: 6px solid transparent;
-            border-top: 6px solid lightgray;
+            border-top: 6px solid var(--text-description-color);
           }
 
           &.asc::before {
@@ -57,7 +59,7 @@
     padding: 10px 14px;
     position: relative;
     border-bottom: 1px solid var(--border-color);
-    color:var(--color-common-main);
+    color:var(--text-description-color);
     svg{
       stroke:var(--color-common-main);;
     }
