--- a/src/components/TextArea/TextArea.scss
+++ b/src/components/TextArea/TextArea.scss
@@ -8,6 +8,8 @@
         display: inline-block;
         margin-bottom: 4px;
         position: relative;
+        font-size: 14px;
+        color:var(--color-common-main)
       }
 
       &.required label::after {
@@ -22,7 +24,7 @@
         display: inline-flex;
         align-items: center;
         position: relative;
-        border: 1px solid colorMapper($color, main);
+        border: 1px solid var(--border-color);
         line-height: 1.7;
         width: 100%;
         height: 100%;
@@ -38,7 +40,7 @@
         }
 
         &:focus {
-          border-color: colorMapper($color, main);
+          border-color: var(--border-color);
         }
 
         &:disabled {
