--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -44,6 +44,24 @@ p {
 }
 
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px var(--container-bg-color) inset;
+  box-shadow: 0 0 0px 1000px var(--container-bg-color) inset;
+  background-color: var(--container-bg-color);
+  color: var(--color-common-main);
+  -webkit-text-fill-color: var(--color-common-main);
+}
+
+
+
 @media screen and (max-width: 1900px) {
   *{
     font-size: 14px;
