--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -43,14 +43,24 @@ $muiTheme: (
     contrastText: #fff,
   ),
   grayClr: (
+    // Dark Theme
     dark-border: #313131,
-    light-border: #f0f0f0,
     dark-background: #141414,
     dark-text-color: #ffffff,
+    dark-hover-color: #313131,
+    dark-hover-text-color: #ffffff,
     dark-description-color: #a9a9a9,
+    dark-container-bg-color: #1f1f1f,
+
+    // Light Theme
+    light-border: #bdbdbd,
+    light-background: #f2f4f8,
     light-text-color: #111827,
+    light-hover-color: #e8e8e8,
+    light-hover-text-color: #111827,
     light-description-color: #6b7280,
-    light-background: #f8f9fc,
+    light-container-bg-color: #ffffff,
+
     50: #fafafa,
     100: #f5f5f5,
     200: #eeeeee,
