working on site insight page

--- a/src/components/CircularProgress/CircularProgress.scss
+++ b/src/components/CircularProgress/CircularProgress.scss
@@ -25,7 +25,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    color:var(--color-common-main);
+    color:var(--text-description-color);
     transform: translate(-50%, -50%);
     font-size: calc(var(--size) * 0.3);
   }
