--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -1,22 +1,26 @@
 .container {
+  @each $color in $colorType {
+    &.#{$color} {
+      &.borderRadius {
+        border-radius: 4px;
+      }
 
-  &.borderRadius {
-    border-radius: 4px;
-  }
+      color: colorMapper($color, main);
+      // &.boxShadow {
+      //   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
+      // }
 
-  // &.boxShadow {
-  //   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.06);
-  // }
+      &.transparent {
+        background-color: transparent;
+      }
 
-  &.transparent {
-    background-color: transparent;
-  }
+      &.contentCenter {
+        @include center;
+      }
 
-  &.contentCenter {
-    @include center;
-  }
-
-  &.fullHeight{
-    height: 100%;
+      &.fullHeight {
+        height: 100%;
+      }
+    }
   }
 }
