--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -4,6 +4,7 @@
   height: 100%;
   .layout-right-section {
     width: 100%;
+    height: 100vh;
     overflow-y: auto;
   }
 
@@ -12,6 +13,8 @@
     padding: 40px 80px;
     width: calc(100% - 240px);
     margin-left: 240px;
+    min-height: 100%;
+    overflow-y: visible;
     position: relative;
   }
 
