--- a/src/container/sites/components/AddedSiteCard/AddedSiteCard.scss
+++ b/src/container/sites/components/AddedSiteCard/AddedSiteCard.scss
@@ -1,13 +1,10 @@
 .added-site-info-container {
-
+  padding: 10px 20px 0px 20px;
   .alert-message {
     width: 100%;
     padding: 12px 20px;
     font-size: 14px;
-    white-space:nowrap;
-  }
-  .recommendations-info {
-    padding: 12px 20px;
+    white-space: nowrap;
   }
 }
 
@@ -19,5 +16,43 @@
     letter-spacing: 2px;
     text-transform: uppercase;
     color: colorMapper(info, main);
+  }
+
+  &__header {
+    svg,
+    img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  .performance-state {
+    border-top: 1px solid var(--border-color);
+    .keywords-performance-stats {
+      border-right: 1px solid var(--border-color);
+      &__graphs {
+        padding: 8px 10px;
+        .icon-button {
+          padding: 0px;
+          min-height: 0px;
+        }
+        .count {
+          font-size: 1.9em;
+          font-weight: 500;
+          letter-spacing: 1px;
+          color: var(--color-common-main);
+        }
+        .total-count {
+          letter-spacing: 1px;
+        }
+      }
+      &__counts {
+        border-right: none;
+      }
+    }
+    .alert-message-container {
+      padding: 8px 10px;
+      border-right: 1px solid var(--border-color);
+    }
   }
 }
