--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,35 +1,31 @@
 .loader-container {
+  text-align: center;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  &.overlay {
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+  }
+}
+.loader {
+  z-index: 9999;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  transform: translate(-50%, -50%);
+  img {
     width: 100%;
     height: 100%;
-    @include flex(center, center, row, 0px);
-
-    &.underlay {
-        position: absolute;
-        width: auto;
-        height: auto;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        z-index: 0;
-    }
-
-    &.overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: rgba($color: #000000, $alpha: 0.7);
-        z-index: 500;
-    }
-
-    .loader {
-        width: 50px;
-        height: 50px;
-
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
+  }
 }
