--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -50,7 +50,7 @@
       &:hover {
         background-color: var(--bg-hover-color) !important;
         color: var(--hovered-text-color) !important;
-        border: none !important;
+        border: 1px solid transparent !important;
       }
     }
 
@@ -60,7 +60,7 @@
       &:hover {
         background-color: var(--bg-hover-color) !important;
         color: var(--hovered-text-color) !important;
-        border: none;
+        border: 1px solid transparent !important;
       }
     }
 
