--- a/src/container/sites/components/AddedSiteCard/AddedSiteCard.scss
+++ b/src/container/sites/components/AddedSiteCard/AddedSiteCard.scss
@@ -19,8 +19,15 @@
   }
 
   &__header {
-    svg,
-    img {
+    .fav-icon-image {
+      width: 24px;
+      height: 24px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    svg {
       width: 24px;
       height: 24px;
     }
