--- a/src/container/layout/AuthLayout/AuthLayout.scss
+++ b/src/container/layout/AuthLayout/AuthLayout.scss
@@ -1,51 +1,59 @@
 .auth-layout {
   height: 100%;
 
-  @media screen and (max-width: 1500px) {
-    .auth-form-section {
-      padding: 40px !important;
-      .container {
-        width: 100% !important;
-        padding: 40px !important;
-      }
-    }
-    @media screen and (max-width: 1100px) {
-      .image-section {
-        display: none;
-      }
-      .auth-form-section {
-        width: 100% !important;
-       
-      }
-      @media screen and (max-width: 800px) {
-        .auth-form-section {
-          .container {
-            padding: 20px !important;
-          }
-        }
-      }
-
-      @media screen and (max-width: 570px) {
-        .auth-form-section {
-          padding: 20px 15px !important;
-          width: 90% !important;
-          .flex-container {
-            gap: 8px !important;
-          }
-        }
-        @media screen and (max-width: 450px) {
-          .auth-form-section {
-            padding: 10px !important;
-            .container {
-              padding: 10px !important;
-            }
-          }
-        }
-      }
-    }
-  }
-
   .auth-form-section {
     min-width: 270px;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .auth-form-section {
+    padding: 40px !important;
+    .container {
+      width: 100% !important;
+      padding: 40px !important;
+    }
+  }
+  @media screen and (max-width: 1100px) {
+    .image-section {
+      display: none !important;
+    }
+    .auth-form-section {
+      width: 100% !important;
+    }
+    @media screen and (max-width: 800px) {
+      .image-section {
+         display: none !important;
+      }
+      .auth-form-section {
+        .container {
+          padding: 20px !important;
+        }
+      }
+    }
+
+    @media screen and (max-width: 570px) {
+      .image-section {
+         display: none !important;
+      }
+      .auth-form-section {
+        padding: 20px 15px !important;
+        width: 90% !important;
+        .flex-container {
+          gap: 8px !important;
+        }
+      }
+      @media screen and (max-width: 450px) {
+        .image-section {
+           display: none !important;
+        }
+        .auth-form-section {
+          padding: 10px !important;
+          .container {
+            padding: 10px !important;
+          }
+        }
+      }
+    }
   }
 }
