--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -7,7 +7,7 @@
     top: 100%;
     z-index: 1000;
     min-width: 200px;
-    padding: 0.5rem 0;
+    padding: 0px;
     margin: 0.125rem 0 0;
     font-size: 1rem;
     text-align: left;
@@ -46,9 +46,8 @@
     }
 
     li {
-      padding: 0.5rem 1.5rem;
+      padding: 0px 1.5rem;
       cursor: pointer;
-      margin: 10px 0px;
 
       &.li-click {
         cursor: pointer;
@@ -56,25 +55,14 @@
           cursor: pointer;
         }
       }
-
-      &:hover {
-        background-color: var(--bg-hover-color);
-      }
-      &:hover .body-text {
-        color: var(--hovered-text-color);
-      }
     }
   }
   &.notification-dropdown-list {
     .dropdown-menu {
-      min-width: 500px;
-      padding: 20px;
+      min-width: 550px;
       max-height: 350px;
-      min-height: 200px;
+      min-height: 500px;
       overflow-y: auto;
-      li {
-        padding: 0px;
-      }
     }
   }
 }
