--- a/src/container/layout/components/TopBar/TopBar.scss
+++ b/src/container/layout/components/TopBar/TopBar.scss
@@ -42,3 +42,22 @@
     }
   }
 }
+
+.dropdown.profile-dropdown-list {
+  .dropdown-menu {
+    padding: 16px 0px;
+    min-width: 350px;
+    li {
+      margin: 10px 0px;
+      min-height: 48px;
+      display: flex;
+      align-items: center;
+      .body-text {
+        font-size: 14px;
+      }
+      .user-name {
+        font-size: 16px;
+      }
+    }
+  }
+}
