--- a/src/container/sites/components/RecommendationList/RecommendationList.scss
+++ b/src/container/sites/components/RecommendationList/RecommendationList.scss
@@ -1,5 +1,6 @@
-.recommendation-list-container{
+.recommendation-list-container {
   background-color: white;
   max-height: 400px;
   overflow-y: auto;
+  position: relative;
 }
