--- a/src/container/sites/components/ImageCard/ImageCard.scss
+++ b/src/container/sites/components/ImageCard/ImageCard.scss
@@ -1,15 +1,19 @@
-.image-container{
+.image-container {
   max-width: 250px !important;
-  background-color: #DAF7DD;
-  border:1px solid var(--border-color);
+  background-color: #daf7dd;
+  border: 1px solid var(--border-color);
   flex: 1;
 
-  .image-wrapper{
+  .image-wrapper {
     width: 200px;
     height: 100px;
-    img{
+    img {
       width: 100%;
       height: 100%;
     }
   }
+}
+
+.images-listing {
+  position: relative;
 }
