--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -14,8 +14,8 @@
     list-style: none;
     color: var(--color-common-main);
     background-color: var(--background-color);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-clip: padding-box;
-    border: 1px solid var(--border-color);
     border-radius: 0.25rem;
     opacity: 0;
     transform: translateY(-10px);
