--- a/src/components/NotificationBadge/NotificationBadge.scss
+++ b/src/components/NotificationBadge/NotificationBadge.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
   color: var(--color-common-main);
 
   svg {
