--- a/src/components/OptimizedImage/OptimizedImage.scss
+++ b/src/components/OptimizedImage/OptimizedImage.scss
@@ -1,6 +1,29 @@
+.image-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .optimized-image-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+
   img {
     width: 100%;
     height: 100%;
+    object-fit: var(--object-fit, cover);
+  }
+
+
+  .image-placeholder {
+    background: #e0e0e0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
   }
 }
