--- a/src/container/sites/components/RecommendationList/RecommendationList.scss
+++ b/src/container/sites/components/RecommendationList/RecommendationList.scss
@@ -1,6 +1,9 @@
 .recommendation-list-container {
   background-color: white;
+  position: relative;
+}
+
+.preview-details-list {
   max-height: 400px;
   overflow-y: auto;
-  position: relative;
 }
