--- a/src/container/sites/pages/Recommendations/Recommendations.scss
+++ b/src/container/sites/pages/Recommendations/Recommendations.scss
@@ -1,5 +1,3 @@
-.site-screenshot {
-  border-radius: 15px;
-  overflow: hidden;
-  box-shadow: var(--button-box-shadow);
+.image-container {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
