--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -14,7 +14,6 @@
     list-style: none;
     color: var(--color-common-main);
     background-color: var(--background-color);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     background-clip: padding-box;
     border-radius: 0.25rem;
     opacity: 0;
@@ -65,4 +64,12 @@
       overflow-y: auto;
     }
   }
+}
+
+.app-container.light .dropdown-menu {
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.app-container.dark .dropdown-menu {
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 4px;
 }
