--- a/src/components/NotificationContainer/NotificationContainer.scss
+++ b/src/components/NotificationContainer/NotificationContainer.scss
@@ -43,7 +43,7 @@
       border-bottom: 1px solid var(--border-color);
     }
     li:has(.new-message) {
-      background: var(--container-bg-color);
+      background: transparent;
     }
     li:has(.old-message) {
       background: transparent;
