--- a/src/container/sites/pages/SiteOverview/SiteOverview.scss
+++ b/src/container/sites/pages/SiteOverview/SiteOverview.scss
@@ -1,4 +1,4 @@
-.keywords-ranking-detail {
+.site-overview-detail {
   .checklist__item {
     padding: 20px;
     .item-icon,
@@ -17,12 +17,19 @@
       font-size: 16px !important;
     }
   }
-  &__card {
-    &__count {
-      color: var(--color-main-common) !important;
-      font-size: 2.43em;
-      font-weight: 500;
+
+  .keywords-ranking-detail {
+    &__card {
+      &__count {
+        color: var(--color-main-common) !important;
+        font-size: 2.43em;
+        font-weight: 500;
+      }
     }
+  }
+
+  .site-insights {
+    padding: 40px 0px;
   }
 
   .recommendations-overview {
