--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,6 +1,6 @@
 $muiTheme: (
   primary: (
-    main: #5543e8,
+    main: #886bf8,
     light: #ebf5ff,
     dark: #4434c9,
     contrastText: #fff,
@@ -55,7 +55,7 @@ $muiTheme: (
     // Light Theme
     light-border: #bdbdbd,
     light-background: #f2f4f8,
-    light-text-color: #111827,
+    light-text-color: #312f30,
     light-hover-color: #e8e8e8,
     light-hover-text-color: #111827,
     light-description-color: #6b7280,
