--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,8 +1,8 @@
 $muiTheme: (
   primary: (
     main: #886bf8,
-    light: #ebf5ff,
-    dark: #4434c9,
+    light: #d6ccfd,
+    dark: #613af6,
     contrastText: #fff,
   ),
   secondary: (
