frontend updation work in progress

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -23,7 +23,7 @@
   }
 
   .modal {
-    background: var(--background-color);
+    background: var(--container-bg-color);
     min-width: 350px;
     max-width: 90%;
     height: auto;
