--- a/src/container/layout/Layout/Layout.scss
+++ b/src/container/layout/Layout/Layout.scss
@@ -10,7 +10,7 @@
 
   .layout-right-section-menu {
     margin-top: 80px;
-    padding: 40px 80px;
+    padding: 40px;
     width: calc(100% - 240px);
     margin-left: 240px;
     min-height: 100%;
@@ -60,7 +60,7 @@
   .layout-container {
     .layout-right-section-menu {
       margin-top: 80px;
-      padding: 60px 200px;
+      // padding: 60px 200px;
     }
   }
 }
@@ -69,7 +69,7 @@
   .layout-container {
     .layout-right-section-menu {
       margin-top: 80px;
-      padding: 60px 150px;
+      // padding: 60px 150px;
     }
   }
 }
@@ -78,7 +78,7 @@
   .layout-container {
     .layout-right-section-menu {
       margin-top: 80px;
-      padding: 60px 100px;
+      // padding: 60px 100px;
     }
   }
 }
@@ -87,7 +87,7 @@
   .layout-container {
     .layout-right-section-menu {
       margin-top: 80px;
-      padding: 50px;
+      // padding: 50px;
     }
   }
 }
