--- a/src/container/sites/components/ImageCard/ImageCard.scss
+++ b/src/container/sites/components/ImageCard/ImageCard.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.dark .image-container {
+  background-color: #2f4f4f;
+}
+
 .images-listing {
   position: relative;
   max-height: 400px;
