--- a/src/container/sites/components/RecommendationList/RecommendationList.scss
+++ b/src/container/sites/components/RecommendationList/RecommendationList.scss
@@ -1,6 +1,9 @@
 .recommendation-list-container {
   background-color: white;
   position: relative;
+  &:has(.shimmer-wrapper) {
+    padding: 40px;
+  }
 }
 
 .preview-details-list {
