--- a/src/components/ToggleButton/ToggleButton.scss
+++ b/src/components/ToggleButton/ToggleButton.scss
@@ -21,6 +21,10 @@
     justify-content: flex-end;
   }
 
+  label {
+    cursor: pointer;
+  }
+
   &.disabled label {
     color: colorMapper(grayClr, 400);
   }
