--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   overflow: hidden;
   background-color: var(--container-bg-color);
   border: 1px solid var(--border-color);
@@ -34,5 +35,21 @@
 
   .fallback-text {
     font-size: 50%;
+  }
+
+  .edit-icon {
+    right: 40px;
+    bottom: 20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: absolute;
+    background: white;
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    svg {
+      fill: gray;
+    }
   }
 }
