--- a/src/components/SearchInput/SearchInput.scss
+++ b/src/components/SearchInput/SearchInput.scss
@@ -6,8 +6,8 @@
     top: 100%;
     left: 0;
     right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: var(--background-color);
+    border: 1px solid var(--border-color);
     border-top: none;
     border-radius: 0 0 4px 4px;
     max-height: 200px;
@@ -24,12 +24,13 @@
         cursor: pointer;
 
         &:hover {
-          background-color: #f0f0f0;
+          background-color: var(--bg-hover-color);
         }
       }
     }
 
-    .loading, .no-results {
+    .loading,
+    .no-results {
       padding: 8px 16px;
       text-align: center;
       color: #666;
