working on stripe

--- a/src/components/NotificationBadge/NotificationBadge.scss
+++ b/src/components/NotificationBadge/NotificationBadge.scss
@@ -8,7 +8,7 @@
   color: var(--color-common-main);
 
   svg {
-    fill: colorMapper(warning, main);
+    fill: colorMapper(primary, main);
     font-size: 25px;
   }
 
