--- a/src/styles/themes/muiTheme.scss
+++ b/src/styles/themes/muiTheme.scss
@@ -1,8 +1,8 @@
 $muiTheme: (
   primary: (
-    main: #886bf8,
+    main: #5543e8,
     light: #d6ccfd,
-    dark: #613af6,
+    dark: #4434c9,
     contrastText: #fff,
   ),
   secondary: (
@@ -55,10 +55,10 @@ $muiTheme: (
     // Light Theme
     light-border: #bdbdbd,
     light-background: #f2f4f8,
-    light-text-color: #312f30,
+    light-text-color: #111827,
     light-hover-color: #e8e8e8,
     light-hover-text-color: #111827,
-    light-description-color: #6b7280,
+    light-description-color: #575757,
     light-container-bg-color: #ffffff,
 
     50: #fafafa,
