--- a/src/components/NotificationContainer/NotificationContainer.scss
+++ b/src/components/NotificationContainer/NotificationContainer.scss
@@ -9,7 +9,7 @@
       top: 50%;
       transform: translateY(-50%);
       font-size: 20px;
-      color: colorMapper(warning, main);
+      color: colorMapper(primary, main);
     }
   }
 
