--- a/src/container/sites/pages/SiteOverview/SiteOverview.scss
+++ b/src/container/sites/pages/SiteOverview/SiteOverview.scss
@@ -1,4 +1,7 @@
 .site-overview-detail {
+  .top-container {
+    position: relative;
+  }
   .checklist__item {
     padding: 20px;
     .item-icon,
